mutation/petclinic_mutations_1647330283.275425/spring-petclinic_v6/major_output_PetType.txt
warning: /Library/Java/JavaVirtualMachines/temurin-8.jdk/Contents/Home/lib/ct.sym(META-INF/sym/rt.jar/java/lang/Object.class): major version 52 is newer than 51, the highest major version supported by this compiler.
  It is recommended that the compiler be upgraded.
/Library/Java/JavaVirtualMachines/temurin-8.jdk/Contents/Home/lib/ct.sym(META-INF/sym/rt.jar/java/lang/Object.class): warning: Cannot find annotation method 'value()' in type 'Profile+Annotation': class file for jdk.Profile+Annotation not found
warning: /Library/Java/JavaVirtualMachines/temurin-8.jdk/Contents/Home/lib/ct.sym(META-INF/sym/rt.jar/java/lang/String.class): major version 52 is newer than 51, the highest major version supported by this compiler.
  It is recommended that the compiler be upgraded.
/Library/Java/JavaVirtualMachines/temurin-8.jdk/Contents/Home/lib/ct.sym(META-INF/sym/rt.jar/java/lang/String.class): warning: Cannot find annotation method 'value()' in type 'Profile+Annotation'
/Users/kralizec/University/mutation/spring-petclinic/src/main/java/org/springframework/samples/petclinic/owner/PetType.java:18: error: package javax.persistence does not exist
import javax.persistence.Entity;
                        ^
/Users/kralizec/University/mutation/spring-petclinic/src/main/java/org/springframework/samples/petclinic/owner/PetType.java:19: error: package javax.persistence does not exist
import javax.persistence.Table;
                        ^
/Users/kralizec/University/mutation/spring-petclinic/src/main/java/org/springframework/samples/petclinic/owner/PetType.java:21: error: package org.springframework.samples.petclinic.model does not exist
import org.springframework.samples.petclinic.model.NamedEntity;
                                                  ^
/Users/kralizec/University/mutation/spring-petclinic/src/main/java/org/springframework/samples/petclinic/owner/PetType.java:28: error: cannot find symbol
public class PetType extends NamedEntity {
                             ^
  symbol: class NamedEntity
/Users/kralizec/University/mutation/spring-petclinic/src/main/java/org/springframework/samples/petclinic/owner/PetType.java:26: error: cannot find symbol
@Entity
 ^
  symbol: class Entity
/Users/kralizec/University/mutation/spring-petclinic/src/main/java/org/springframework/samples/petclinic/owner/PetType.java:27: error: cannot find symbol
@Table(name = "types")
 ^
  symbol: class Table
